fixed scroll bar shifting content on posts

--- a/static/styles.css
+++ b/static/styles.css
@@ -16,6 +16,11 @@
     --blockquote-color: #ccc;
 }
 
+html {
+    overflow-x: hidden;
+    margin-right: calc(-1 * (100vw - 100%));
+}
+
 body {
     font-family: var(--font-main);
     font-size: var(--font-scale);
